--- a/main/static/scss/darkbase.scss
+++ b/main/static/scss/darkbase.scss
@@ -50,6 +50,21 @@ body.darkmode{
 
     #content {
 
+        #section1 {
+            #postlist{
+                .latestsposts{
+                    .latestpost{
+                        .postdate{
+                            color: rgba(255, 255, 255, 0.39);
+                        }
+                        .posttopic {
+                            color: rgba(255, 255, 255, 0.39);
+                        }
+                    }
+                }
+            }
+        }
+
         #sidebar {
             h3 {
                 a {
